# Lecture_AI

./: .env_example  .gitignore  README.md  README_cn.md  app.py  main.py  pyproject.toml
lecture_recording/: note_pad.md
lecture_recording/lecun_world_model_discussion/: lecun_world_model_discussion_formatted.md  lecun_world_model_discussion_summary.md
lecture_recording/lecun_world_model_discussion/asr/: lecun_world_model_discussion_chunk_1_asr.md  lecun_world_model_discussion_chunk_2_asr.md  lecun_world_model_discussion_chunk_3_asr.md  lecun_world_model_discussion_chunk_4_asr.md  lecun_world_model_disscusion_aggregated.md
lecture_recording/test_lecture/: test_lecture_formatted.md  test_lecture_summary.md
lecture_recording/test_lecture/asr/: test_lecture_raw_aggregated.md  test_lecture_raw_asr.md
lecture_recording/test_lecture/raw/: test_lecture_raw.webm
pages/: status.py  summary.py
src/: agent.py  utils.py
src/audio/: __init__.py  processor.py  transcriber.py
src/audio_processing/: audio_text.txt
src/graph/: builder.py  nodes.py  state.py
src/pdf/: generator.py
src/prompt/: key_note_agent_system_prompt.md  orchestration_agent_system_prompt.md  transcription_agent_system_prompt.md
src/test/: test_audio_chunk.ipynb  test_langchain_minimax.ipynb  test_openai_whisper.ipynb
