[project]
name = "lecture-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.5.9",
    "ipykernel>=7.2.0",
    "langchain>=1.2.18",
    "langchain-anthropic>=1.4.3",
    "langchain-openrouter>=0.2.3",
    "openai>=2.36.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
    "langgraph>=0.4.0",
    "streamlit>=1.40.0",
    "reportlab>=4.0.0",
    "markdown-pdf>=1.13.2",
    "markdown>=3.10.2",
]
